--- a/src/recipes/static/recipes/css/detail.css
+++ b/src/recipes/static/recipes/css/detail.css
@@ -1,8 +1,9 @@
 :root {
   --background-color: #ffffff;
   --font-color: #000000;
-  --hover-color: #ff0000;
+  --hover-color: #006600;
   --active-color: #0000ff;
+  --button-font: #800000;
 }
 
 * {
@@ -41,13 +42,36 @@ a:active {
 
 h1 {
   text-align: center;
+  color: var(--button-font);
+}
+
+h2 {
+  text-align: center;
+  color: var(--button-font);
+}
+
+.page-header {
+  display: flex;
+  width: 100px;
+  padding: 20px;
+}
+
+.page-header__item {
+  flex: 0 1 200px;
+}
+
+.page-header__item:last-child {
+  flex-grow: 1;
+  text-align: left;
 }
 
 .detail_modal {
   margin: auto;
   display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
   box-sizing: border-box;
-  background-color: var(--background-color);
+  background-color: none;
   border: 1px solid;
   padding: 20px;
   width: 80%;
@@ -61,4 +85,24 @@ h1 {
   max-height: 360px;
   min-width: 180px;
   min-height: 90px;
+}
+
+.back__btn {
+  background-color: none;
+  color: var(--button-font);
+  font-size: 14px;
+  font-family: 'Lato', sans-serif;
+  height: 30px;
+  width: 150px;
+  border-radius: 1px;
+}
+
+.logout__btn {
+  background-color: none;
+  color: var(--button-font);
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  border-radius: 5px;
+  height: 40px;
+  width: 160px;
 }
