--- a/src/recipes/static/recipes/css/home.css
+++ b/src/recipes/static/recipes/css/home.css
@@ -1,8 +1,9 @@
 :root {
   --background-color: #ffffff;
   --font-color: #000000;
-  --hover-color: #ff0000;
+  --hover-color: #006600;
   --active-color: #0000ff;
+  --button-font: #800000;
 }
 
 * {
@@ -35,6 +36,27 @@ a:active {
 
 h1 {
   text-align: center;
+  color: var(--button-font);
+}
+
+h2 {
+  text-align: center;
+  color: var(--button-font);
+}
+
+.page-header {
+  display: flex;
+  width: 100px;
+  padding: 20px;
+}
+
+.page-header__item {
+  flex: 0 1 200px;
+}
+
+.page-header__item:last-child {
+  flex-grow: 1;
+  text-align: left;
 }
 
 .nav-list {
@@ -51,17 +73,24 @@ h1 {
   text-decoration: none;
 }
 
-.page-header {
-  display: flex;
-  width: 100px;
+.login__modal {
+  border: 5px;
+  display: inline-block;
+  align-items: center;
+  box-sizing: border-box;
+  background-color: none;
+  margin: auto;
   padding: 20px;
+  width: 80%;
+  max-width: 420px;
 }
 
-.page-header__item {
-  flex: 0 1 200px;
-}
-
-.page-header__item:last-child {
-  flex-grow: 1;
-  text-align: right;
+.login__btn {
+  background-color: none;
+  color: var(--button-font);
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  border-radius: 5px;
+  height: 40px;
+  width: 160px;
 }
