--- a/src/recipes/static/recipes/css/main.css
+++ b/src/recipes/static/recipes/css/main.css
@@ -1,8 +1,9 @@
 :root {
   --background-color: #ffffff;
   --font-color: #000000;
-  --hover-color: #ff0000;
+  --hover-color: #006600;
   --active-color: #0000ff;
+  --button-font: #800000;
 }
 
 * {
@@ -21,6 +22,41 @@ body {
 
 h1 {
   text-align: center;
+  color: var(--button-font);
+}
+
+h2 {
+  text-align: center;
+  color: var(--button-font);
+}
+
+.nav-list {
+  list-style-type: none;
+}
+
+.nav-list li {
+  display: inline-block;
+  margin-left: 15px;
+  list-style-type: none;
+}
+
+.nav-list__item--active {
+  text-decoration: none;
+}
+
+.page-header {
+  display: flex;
+  width: 100px;
+  padding: 20px;
+}
+
+.page-header__item {
+  flex: 0 1 200px;
+}
+
+.page-header__item:last-child {
+  flex-grow: 1;
+  text-align: left;
 }
 
 .grid {
@@ -86,4 +122,14 @@ a:active {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+}
+ 
+.logout__btn {
+  background-color: none;
+  color: var(--button-font);
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  border-radius: 5px;
+  height: 40px;
+  width: 160px;
 }
