--- a/src/recipes/templates/recipes/recipes_home.html
+++ b/src/recipes/templates/recipes/recipes_home.html
@@ -21,8 +21,7 @@
     <h1>Welcome to my Recipe App</h1>
       <nav class="page-header__item">
         <div role="menubar" class="nav-list">
-          <a href="list/" role="menuitem" class=" login__btn">Register</a>
-          <a href="{% url 'login' %}" role="menuitem" class="login__btn">Login</a>
+          <a href="{% url 'recipes:list' %}" class="login__btn">Enter The Recipe App</a>
         </div>  
       </nav>
     </header>
