--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -18,11 +18,12 @@
   </head>
   <body>
     <header class="page-header__item">
-      <h2>Please login to access the Recipes.</h2> 
+      <h1>Welcome to my Recipe App</h1>
     </header>
-    <div class="login__modal">    
+    <div class="login__modal">
+      <h2>Login to access the Recipes.</h2> 
       <br>
-      <h1>Login</h1> {% comment %} print heading {% endcomment %}
+      {% comment %} print heading {% endcomment %}
 
       {% comment %} check for error message {% endcomment %}
       {% if error_message %}
