--- a/src/templates/auth/success.html
+++ b/src/templates/auth/success.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/home.css' %}">
-    <title>Sign up Page</title>
+    <title>Logged page</title>
     <style>
       body {
         background-image: url("{% static 'recipes/images/background_snack.jpg' %}");
@@ -18,13 +18,13 @@
   </head>
   <body>
     <header class="page-header__item">
-      <h1>You have successfully logged out</h1>
-      <a href="{% url 'recipes:list' %}" class="login__btn">Recipe App</a>
+      <h1>Welcome to my Recipe App</h1>    
       <nav class="page-header__item nav-list">
         <div class="nav-list">
-          <a href="{% url 'login' %}" class="login__btn">Login</a>
+          <a href="{% url 'recipes:list' %}" class="login__btn">Enter The Recipe App</a>
         </div>  
       </nav>
+      <h2>You have successfully logged out</h2>
     </header>
   </body>
 </html>
