--- a/src/recipes/templates/recipes/detail.html
+++ b/src/recipes/templates/recipes/detail.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/home.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/detail.css' %}">
     <title>Recipe Details</title>
     <style>
