--- a/src/recipes/templates/recipes/main.html
+++ b/src/recipes/templates/recipes/main.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/home.css' %}"> 
     <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/main.css' %}">
     <title>Recipe List</title>
     <style>
@@ -14,7 +15,7 @@
         background-attachment: fixed;
         background-size: cover;
       }
-      </style>
+    </style>
   </head>
   <body>
     <header class="page-header__item">
