--- a/src/recipes/templates/recipes/searches.html
+++ b/src/recipes/templates/recipes/searches.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/home.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'recipes/css/search.css' %}">
     <title>Search Recipe</title>
     <style>
@@ -21,8 +22,8 @@
         <h1>Welcome to my Recipe App</h1>
         <nav>
 					<div role="menulist" class="nav-list">
-						<a href="{% url 'recipes:list' %}" class="logout_btn">Recipes</a>
-						<a href="{% url 'logout' %}" class="logout_btn">Logout</a>
+						<a href="{% url 'recipes:list' %}" class="logout__btn">Recipes</a>
+						<a href="{% url 'logout' %}" class="logout__btn">Logout</a>
 					</div>
 				</nav>
       </header>
