--- a/src/recipes/templates/recipes/recipes_home.html
+++ b/src/recipes/templates/recipes/recipes_home.html
@@ -21,7 +21,10 @@
     <h1>Welcome to my Recipe App</h1>
       <nav class="page-header__item">
         <div role="menubar" class="nav-list">
-          <a href="{% url 'recipes:list' %}" class="login__btn">Enter The Recipe App</a>
+          <br>
+          <a href="{% url 'recipes:list' %}" class="login__btn">
+            Click here to Login
+          </a>
         </div>  
       </nav>
     </header>
