--- a/src/recipes/templates/recipes/detail.html
+++ b/src/recipes/templates/recipes/detail.html
@@ -34,7 +34,7 @@
       <div class="detail_modal">
         <h2>{{object.name}}</h2>
         <br>
-        <img class="recipe_image" src="{{object.pic.url}}">
+        <img class="recipe_image" src="{% static 'recipes/' %}{{ object.pic.url }}" alt="{{object.name}}"/>
         <div>
         <b>Name: </b> {{object.name}}  <br>
         <b>Ingredients: </b> {{object.ingredients}} <br>
