image address error

--- a/src/recipes/templates/recipes/main.html
+++ b/src/recipes/templates/recipes/main.html
@@ -34,7 +34,7 @@
      <div class="grid_item">
        <div>
          <a href="{{object.get_absolute_url}}">
-           <img class="recipe_image" src="{% static 'recipes/' %}{{ object.pic.url }}" alt="{{object.name}}"/>
+           <img class="recipe_image" src="{% static 'recipes' %}{{ object.pic.url }}" alt="{{object.name}}"/>
          </a>
        </div>
        <div>
