remove edit recipe button once code works

--- a/recipes/templates/recipes/detail.html
+++ b/recipes/templates/recipes/detail.html
@@ -44,9 +44,9 @@
         <br> {{object.instructions|safe}}
         </div>
         <br>
-        <a href="{% url 'recipes:edit_recipe' %}">
+        <!-- <a href="{% url 'recipes:edit_recipe' %}">
           <button class="back__btn">Edit this Recipe</button>
-        </a>
+        </a> -->
         <br>
         <br>
         <div>
